--- a/src/Backend/Fire.Application/Fire.Application.csproj
+++ b/src/Backend/Fire.Application/Fire.Application.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="AWSSDK.S3" Version="4.0.13.1" />
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Mapster" Version="7.4.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.22" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.3.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.10" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.10" />
